# Metal-cppGraphics

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
.cache/clangd/index/: AppKit.hpp.30F25342931D7033.idx  AppKit.hpp.E101EE10FBF66399.idx  AppKitPrivate.hpp.3B0007747EFBE730.idx  AppKitPrivate.hpp.963F3F426FB52BC7.idx  CADefines.hpp.4DD3533A5DD9D02E.idx  CADefines.hpp.D7372E1A73B12542.idx  CAMetalDrawable.hpp.95C638C7AF950211.idx  CAMetalDrawable.hpp.D1027F8DB5DAB69E.idx  CAMetalLayer.hpp.27BA89BC6F7796C2.idx  CAMetalLayer.hpp.E977703236CE0FC8.idx  CAPrivate.hpp.073C8EF2C393CF74.idx  CAPrivate.hpp.7DE6A0DDADDC559A.idx  Foundation.hpp.46B0D1FF42FE7F01.idx  Foundation.hpp.562BDF87E9D15B8E.idx  MTKView.hpp.B63EDACB856F0189.idx  MTKView.hpp.DCCBB47A9CDDB077.idx  MTLAccelerationStructure.hpp.5BD5F3C7461B4AFD.idx  MTLAccelerationStructure.hpp.FBF9CE6A0E01333C.idx  MTLAccelerationStructureCommandEncoder.hpp.164B4EE950A6E53D.idx  MTLAccelerationStructureCommandEncoder.hpp.E24CDB6E2340EBE7.idx  MTLAccelerationStructureTypes.hpp.0AC1F96FC4ACB4B0.idx  MTLAccelerationStructureTypes.hpp.26739B0BDF90B121.idx  MTLArgument.hpp.6611CDF86BE6501E.idx  MTLArgument.hpp.A52FC8ED3C7656F8.idx  MTLArgumentEncoder.hpp.7DD94953A41A64CB.idx  MTLArgumentEncoder.hpp.8C92F53AE5DBDB3B.idx  MTLBinaryArchive.hpp.5188D2B3AC5522F6.idx  MTLBinaryArchive.hpp.B339FCED15AEE19E.idx  MTLBlitCommandEncoder.hpp.AC7C158E43E85F24.idx  MTLBlitCommandEncoder.hpp.B6DCD581CBECC710.idx  MTLBlitPass.hpp.5B35C804E14997EA.idx  MTLBlitPass.hpp.8C343A82ACE0F7CE.idx  MTLBuffer.hpp.2135AD8919F09399.idx  MTLBuffer.hpp.83E22AB33BF184E7.idx  MTLCaptureManager.hpp.2E75BB177FC1CCEC.idx  MTLCaptureManager.hpp.E49B84517A32FA70.idx  MTLCaptureScope.hpp.36589AA6574B0293.idx  MTLCaptureScope.hpp.574BFF02AED9D8AD.idx  MTLCommandBuffer.hpp.642794CFA9D6C27B.idx  (+163 more)
cmake-metal/: CMakeLists.txt
include/: AppDelegate.h  MTKViewDelegate.h  Renderer.h
metal-cmake/: CMakeLists.txt  source.cpp
shaders/: square.metal  triangle.metal
src/: AppDelegate.cpp  MTKViewDelegate.cpp  Renderer.cpp  main.cpp
(+4 files in other folders)
